<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#dfedf5"
    android:elevation="4dp"
    android:padding="16dp">

    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/postImage"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postImageView" />

    <LinearLayout
        android:id="@+id/likesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postTextView">

        <ImageView
            android:id="@+id/likesIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/likes_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/unlike" />

        <TextView
            android:id="@+id/likesTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/commentsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postTextView"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/commentsIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/comments_icon"
            android:src="@drawable/comment" />

        <TextView
            android:id="@+id/commentsTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>